# cassava-leaf-disease

./: .gitignore  .pre-commit-config.yaml  README.md  cassava-leaf-disease.code-workspace  pyproject.toml  train_cli.py
.github/workflows/: ruff.yml
configs/: config.yaml
leaf_disease/datasets/: augmentation.py  dataset.py
leaf_disease/lit_models/: lit_model.py
leaf_disease/models/: __init__.py  efficientnet.py  resnet.py
notebooks/: eda.ipynb  list_of_models.ipynb  train_model.ipynb
scripts/: run_all_models.sh  run_top3.sh  run_train.sh
