[tool.poetry]
name = "cassava-leaf-disease"
version = "0.1.0"
description = ""
authors = ["cespeleta <diaboly@gmail.com>"]
readme = "README.md"
packages = [{include = "leaf_disease"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
lightning = "^2.0.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
scikit-learn = "^1.2.2"
jsonargparse = {extras = ["signatures"], version = "^4.21.1"}
albumentations = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
matplotlib = "^3.7.1"
tensorboard = "^2.13.0"
torch-tb-profiler = "^0.4.1"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
